self-healing-microservices-main/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: production
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /health
            pathType: Exact
            backend:
              service:
                name: flask-api-service
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: flask-api-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
